include dwolla environment for payment

--- a/.env
+++ b/.env
@@ -18,11 +18,11 @@ NEXT_APPWRITE_KEY=standard_cd027795e95a4d6079148302ed82eca501c76c37d6e28dda
 
 
 #PLAID
-PLAID_CLIENT_ID=
+PLAID_CLIENT_ID=67e98145f2516500245db205
 PLAID_SECRET=
-PLAID_ENV=
-PLAID_PRODUCTS=
-PLAID_COUNTRY_CODES=
+PLAID_ENV=sandbox
+PLAID_PRODUCTS=auth,transactions.identity
+PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
 DWOLLA_KEY=
